InvisibleText bug in Safari fixed - height:0 did it.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Default.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.23 $
+ * @version     $Revision: 1.24 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -204,6 +204,7 @@ dd {
  */
 .InvisibleText {
     width: 0;
+    height: 0;
     display: inline-block;
     text-indent: -9999px;
     white-space: nowrap;
